--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -20,3 +20,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm i
       - run: npm test
+      - run: npm start
+          
