--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "history": "^5.0.0",
-    "jest": "^26.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -41,8 +40,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
     "@testing-library/react": "^11.2.2",
+    "babel-jest": "^26.6.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "jest": "^26.6.3",
     "jest-dom": "^4.0.0",
-    "react-test-renderer": "^17.0.1"
+    "react-test-renderer": "^17.0.2"
   }
 }
